--- a/less/style.less
+++ b/less/style.less
@@ -55,7 +55,7 @@ html {
 
 body {
     margin: 0px auto;
-    max-width: 500px;
+    max-width: 400px;
     text-align: left;
 }
 
@@ -63,6 +63,12 @@ table.summary {
     width: 100%;
 
     border-collapse: collapse;
+
+    margin-top: 10px;
+
+    &:first-child {
+        margin-top: 0px;
+    }
 
     th, td {
         border-bottom: 1px solid @light_gray;
@@ -73,17 +79,27 @@ table.summary {
 
         padding: 4px 14px;
         padding-bottom: 7px;
+
+        text-align: center;
     }
 
     td {
         padding:         0px;
         padding-left:    1px;
-        padding-right:  14px;
+        padding-right:  10px;
     }
 
     td div {
         padding-top:    3px;
         padding-bottom: 3px;
+    }
+
+    td.money {
+        width: 4em;
+    }
+
+    tbody tr:first-child td {
+        padding-top: 1px;
     }
 
     tbody tr:nth-child(odd) {
@@ -92,7 +108,7 @@ table.summary {
 }
 
 .description {
-    width: 20em;
+    width: 15em;
 }
 
 .floaty_container {
@@ -208,12 +224,18 @@ table.summary {
         color: @lighter_gray;
     }
 
+    & > div {
+        margin-bottom: 9px;
+    }
+
     select,
     input {
         padding: 6px;
 
         border: 1px solid rgba(0, 0, 0, 0.20);
         border-bottom-color: rgba(0, 0, 0, 0.40);
+
+        background: white;
 
         &:focus {
             .focus_outline;
@@ -224,21 +246,16 @@ table.summary {
 .button_group {
     text-align: center;
 
-    margin-top: 1em;
-
     button {
         min-width: 6em;
-        padding: 0.30em 0.90em;
+        padding: 0.40em 0.90em;
+
+        padding-bottom: 0.50em;
 
         background: @button_bg;
 
-        border: none;
-
-        box-shadow:
-            0px  0px 1px rgba(0, 0, 0, 0.50),
-            0px  1px 1px rgba(0, 0, 0, 0.50);
-
-        border: 1px solid transparent;
+        border: 1px solid rgba(0, 0, 0, 0.10);
+        border-bottom-color: rgba(0, 0, 0, 0.20);
 
         border-radius: 2px;
 
@@ -246,6 +263,7 @@ table.summary {
 
         &.primary {
             background: @button_primary_bg;
+            border-bottom-color: rgba(0, 0, 0, 0.30);
         }
 
         &:hover {
