Removed KO HTML magic comments

--- a/less/style.less
+++ b/less/style.less
@@ -21,7 +21,7 @@
 
     width: 40%;
 
-    border-left: 1px dashed rgba(0, 0, 0, 0.10);
+    // border-left: 1px dashed rgba(0, 0, 0, 0.10);
 }
 
 #expenses {
