--- a/less/style.less
+++ b/less/style.less
@@ -6,13 +6,33 @@
 
 @fg: #333333;
 
-@button_bg:         #f8f8f8;
+@button_bg:         #eee;
 @button_primary_bg: lighten(@tango_light_blue, 20%);
 
 @tango_light_blue: #729fcf;
 
 * {
+    .border_box;
+}
+
+.border_box {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.appearance_none {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+}
+
+.firefox_hide_select_arrows {
+    text-indent: 0.01px;
+    text-overflow: '';
 }
 
 #debts {
@@ -271,9 +291,7 @@ table.summary {
 .focus_outline {
     outline: none;
 
-    box-shadow: 0px 0px 0px 3px fadeout(@tango_light_blue, 50%);
-
-    border-color: fadeout(black, 50%);
+    box-shadow: 0px 2px 0px black;
 }
 
 #expense_form {
@@ -289,14 +307,18 @@ table.summary {
         margin-bottom: 9px;
     }
 
+    font-size: 120%;
+
     select,
     input {
+        .appearance_none;
+
         padding: 6px;
 
-        border: 1px solid rgba(0, 0, 0, 0.15);
-        border-bottom-color: rgba(0, 0, 0, 0.30);
+        border: none;
+        box-shadow: 0px 2px 0px fadeout(black, 80%);
 
-        background: white;
+        background: transparent;
 
         border-radius: 0px;
 
@@ -307,44 +329,64 @@ table.summary {
         &.long {
             width: 100%;
         }
+
+        &:hover {
+            box-shadow: 0px 2px 0px fadeout(black, 60%);
+        }
+
+        font-size: 100%;
+
+        vertical-align: baseline;
+    }
+
+    // Hack to hide arrows in Firefox
+    select {
+        .firefox_hide_select_arrows;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    input.price {
+        width: 5em;
     }
 }
 
 .button_group {
     text-align: center;
 
+    padding-top: 8px;
+    margin-bottom: -8px;
+
     button {
-        min-width: 6em;
-        padding: 0.40em 0.90em;
+        min-width: 8em;
+        padding: 0.40em 1.90em;
 
         padding-bottom: 0.50em;
 
         background: @button_bg;
 
-        border: 1px solid rgba(0, 0, 0, 0.15);
-        border-bottom-color: rgba(0, 0, 0, 0.25);
+        text-transform: uppercase;
+
+        font-size: 60%;
+
+        // border: none;
+        border: none;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+
+        box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.40);
 
         border-radius: 2px;
 
         font-weight: bold;
 
         &:hover:not(:focus) {
-            background: lighten(@button_bg, 1%);
-            border-color: rgba(0, 0, 0, 0.30);
+            border-color: rgba(0, 0, 0, 0.15);
         }
 
         &.primary {
             background: @button_primary_bg;
-            border-color: rgba(0, 0, 0, 0.10);
-            border-bottom-color: rgba(0, 0, 0, 0.30);
-
-            &:focus {
-                border-color: rgba(0, 0, 0, 0.30);
-            }
-
-            &:hover {
-                background: lighten(@button_primary_bg, 2%);
-            }
         }
     }
 }
