--- a/less/style.less
+++ b/less/style.less
@@ -134,10 +134,14 @@ button::-moz-focus-inner {
 
     border-radius: 2px;
 
-    box-shadow:
-        0px  1px 2px rgba(0, 0, 0, 0.25),
-        0px  1px 0px rgba(0, 0, 0, 0.10),
-        0px -1px 0px rgba(0, 0, 0, 0.02);
+    // box-shadow:
+    //     0px  1px 2px rgba(0, 0, 0, 0.25),
+    //     0px  1px 0px rgba(0, 0, 0, 0.10),
+    //     0px -1px 0px rgba(0, 0, 0, 0.02);
+
+    border: 1px solid fadeout(black, 85%);
+    border-top-color: fadeout(black, 88%);
+    border-bottom-color: fadeout(black, 75%);
 
     padding: 4px 0px;
     padding-bottom: 6px;
