--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 @button_primary_bg: lighten(@tango_light_blue, 20%);
 
 @tango_light_blue: #729fcf;
+@tango_mid_orange: #f57900;
 
 @button_border:         fadeout(black, 90%);
 @button_hover_border:   fadeout(black, 80%);
@@ -21,13 +22,22 @@
 @button_bg: darken(@tango_light_blue, 10%);
 @button_fg: #fafafa;
 
-@header_bg: @bg + #080808;
-@header_fg: @header_bg - #888;
+@header_bg: #444;
+@header_fg: @header_bg + #888;
 
 @close_bg:          #aaaaaa;
 @close_focus_bg:    #cccccc;
 
 @border_size: 1px;
+
+@tango_purple:  #75507b; // plum
+@tango_red:     #cc0000; // scarlet red
+@tango_green:   #4e9a06; // chameleon
+@tango_yellow:  #edd400; // butter
+@tango_blue:    #3465a4; // sky blue
+@tango_orange:  #f57900; // orange
+@tango_brown:   #c17d11; // chocolate
+@tango_gray:    #babdb6; // aluminium
 
 * {
     .border_box;
@@ -40,7 +50,15 @@
     border: 0;
 }
 
-.border_box() {
+.border_3d {
+    border-color:
+        fadeout(black, 96%)
+        fadeout(black, 90%)
+        fadeout(black, 80%)
+        fadeout(black, 90%);
+}
+
+.border_box {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -48,7 +66,7 @@
     box-sizing: border-box;
 }
 
-.appearance_none() {
+.appearance_none {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
@@ -57,7 +75,7 @@
 
 .firefox_hide_select_arrows {
     text-indent: 0.01px;
-    text-overflow: '';
+    text-overflow: "";
 }
 
 .round(@r: 2px) {
@@ -85,34 +103,51 @@
     .round(100%);
 }
 
-#header {
-    .round_bottom;
-
-    // margin-top: -10px;
-
-    padding: 10px;
-    padding-top: 0px;
-
-    // box-shadow: inset 0px -1px 1px 0px fadeout(black, 80%);
-
-    // box-shadow: inset 0px -3px 0px fadeout(black, 99%);
-    border-bottom: 1px solid fadeout(black, 90%);
-
-    background: @header_bg;
-    color: @header_fg;
-}
-
-#title {
-    font-size: 30px;
-    margin: 0px;
-    padding: 0px;
-
+.bold {
     font-weight: bold;
 }
 
+#header {
+    .bold;
+    // margin-top: -10px;
+
+    padding: 0px;
+    padding-top: 0px;
+    padding-bottom: 3px;
+
+    // box-shadow: inset 0px -1px 1px 0px fadeout(black, 80%);
+
+    // box-shadow: 0px 1px 0px fadeout(black, 90%);
+    border-bottom: 1px solid fadeout(black, 80%);
+
+    background: @header_bg;
+    color: @header_fg;
+
+    // margin-bottom: 1em;
+}
+
+#title {
+    font-size: 20px;
+    margin: 0px;
+    padding: 0px;
+
+    margin-right: 1px;
+
+    padding-left:   0.50em;
+    padding-right:  0.50em;
+    padding-bottom: 0.20em;
+    padding-top:    0.10em;
+
+    // border-bottom: 3px solid transparent;
+
+    display: inline-block;
+
+    color: white;
+}
+
 #login {
-    font-size: 90%;
-    margin-left: 1em;
+    font-size: 80%;
+    margin-left: 0.50em;
     display: inline-block;
 }
 
@@ -197,7 +232,7 @@
     padding-bottom: 6px;
 
     &.transient {
-        background: rgba(0, 0, 0, 0.02);
+        background: rgba(0, 0, 0, 0.04);
 
         // border-radius: 0px;
 
@@ -351,8 +386,8 @@ table.summary {
 .stealth_edit {
     .appearance_none;
 
-    border: none;
-    box-shadow: 0px @border_size 0px fadeout(black, 80%);
+    border: 1px solid transparent;
+    border-bottom-color: fadeout(black, 80%);
 
     background: transparent;
 
@@ -363,13 +398,13 @@ table.summary {
     }
 
     &:hover:not(:focus) {
-        box-shadow: 0px 0px 0px @border_size fadeout(black, 80%);
+        .border_3d;
     }
 
     &:hover,
     &:focus {
-        background: @lighter_gray;
-        box-shadow: 0px 0px 0px @border_size fadeout(black, 60%);
+        background: fadeout(@lighter_gray, 50%);
+        .border_3d;
         // .round;
     }
 }
@@ -424,7 +459,7 @@ table.summary {
 .focus_outline {
     outline: none;
 
-    box-shadow: 0px 2px 0px black;
+    border-bottom-color: black;
 }
 
 #expense_form {
@@ -460,6 +495,7 @@ table.summary {
         color:      @button_fg;
 
         border: @border_size solid @button_border;
+        .border_3d;
 
         text-transform: lowercase;
 
@@ -471,15 +507,6 @@ table.summary {
         &:focus {
             outline: none;
             background: @button_hover_bg;
-        }
-
-        &:hover {
-            border-color: @button_hover_border;
-        }
-
-        &:active,
-        &:focus {
-            border-color: @button_focus_border;
         }
     }
 
@@ -532,4 +559,8 @@ button {
 
     width: 100%;
     margin: 0px;
+}
+
+@media (max-width: 800px) {
+    @import "narrow";
 }
