--- a/less/style.less
+++ b/less/style.less
@@ -30,6 +30,9 @@
 
 @border_size: 1px;
 
+@sidebar_size: 200px;
+@column_size: 600px;
+
 @tango_purple:  #75507b; // plum
 @tango_red:     #cc0000; // scarlet red
 @tango_green:   #4e9a06; // chameleon
@@ -107,7 +110,7 @@
     font-weight: bold;
 }
 
-#header {
+#navigation {
     .bold;
     // margin-top: -10px;
 
@@ -115,34 +118,52 @@
     padding-top: 0px;
     padding-bottom: 3px;
 
-    // box-shadow: inset 0px -1px 1px 0px fadeout(black, 80%);
-
-    // box-shadow: 0px 1px 0px fadeout(black, 90%);
-    border-bottom: 1px solid fadeout(black, 80%);
+    border-right: 1px solid fadeout(black, 90%);
 
     background: @header_bg;
     color: @header_fg;
 
     // margin-bottom: 1em;
+
+    position: fixed;
+    width: @sidebar_size;
+
+    top:    0px;
+    left:   0px;
+    bottom: 0px;
+
+    & > * {
+        display: block;
+        padding: 10px;
+    }
+
+    a {
+        &:hover {
+            background: fadeout(white, 90%);
+            border-color: @tango_green;
+        }
+
+        &:focus {
+            outline: none;
+        }
+
+        // border-right: 6px solid transparent;
+        border-left: 6px solid transparent;
+
+        color: @header_fg;
+        text-decoration: none;
+    }
 }
 
 #title {
     font-size: 20px;
-    margin: 0px;
-    padding: 0px;
 
-    margin-right: 1px;
+    padding-left: 10px;
 
-    padding-left:   0.50em;
-    padding-right:  0.50em;
-    padding-bottom: 0.20em;
-    padding-top:    0.10em;
-
-    // border-bottom: 3px solid transparent;
-
-    display: inline-block;
+    // border-bottom: 1px solid fadeout(black, 90%);
 
     color: white;
+    background: #333;
 }
 
 #login {
@@ -181,27 +202,13 @@
 }
 
 #debts {
-    // max-width: 400px;
-    float: right;
-
-    width: 40%;
-
-    // border-left: 1px dashed rgba(0, 0, 0, 0.10);
 }
 
 #expenses {
-    float: right;
-
-    width: 60%;
-
-    // border-right: 1px dashed rgba(0, 0, 0, 0.10);
-}
-
-.column {
 }
 
 .main_margin {
-    margin: 10px 20px;
+    margin: 10px 0px;
 }
 
 .main_padding {
@@ -282,7 +289,21 @@ body {
     margin: 0px auto;
     text-align: left;
 
-    max-width: 800px;
+    margin-left: @sidebar_size;
+
+    text-align: center;
+}
+
+.column {
+    text-align: center;
+
+    margin: 0px 10px;
+
+    & > * {
+        max-width: @column_size;
+        margin-left:  auto;
+        margin-right: auto;
+    }
 }
 
 table.summary {
@@ -410,8 +431,7 @@ table.summary {
 }
 
 .shares_paid {
-    display: inline-block;
-    float: right;
+    display: block;
     background: @lighter_gray;
 
     border-radius: 1px;
