--- a/less/style.less
+++ b/less/style.less
@@ -140,6 +140,10 @@
     a {
         &:hover {
             background: fadeout(white, 90%);
+        }
+
+        &:hover,
+        &.selected {
             border-color: @tango_green;
         }
 
